优化登陆，实现多端自动踢人